--- a/index.html
+++ b/index.html
@@ -11,8 +11,13 @@
     <article class="cartão">
         <div class="cartão__conteudo">
             <h3>Programação</h3>
-        </div>
-    </article>
+        </div class="cartão__conteudo__pergunta">
+        O que é JavaScript?
+    </div>
+    <div class="cartão__conteudo__pergunta">
+        O JavaScript é uma linguagem de Programação.
+    </div>
+  </article>
   </section>
  </main>  
  <footer>
