--- a/index.html
+++ b/index.html
@@ -18,6 +18,16 @@
         O JavaScript é uma linguagem de Programação.
     </div>
   </article>
+  <article class="cartão">
+    <div class="cartão__conteudo">
+        <h3>Programação</h3>
+    </div class="cartão__conteudo__pergunta">
+    O que é css?
+</div>
+<div class="cartão__conteudo__pergunta">
+    O css é uma linguagem de estilização.
+</div>
+</article>
   </section>
  </main>  
  <footer>
