--- a/index.html
+++ b/index.html
@@ -11,28 +11,28 @@
   <section id="container">
     <article class="cartão">
         <div class="cartão__conteudo">
-            <h3>Programação</h3>
+       <h3>Programação</h3>
         </div class="cartão__conteudo__pergunta">
-        O que é JavaScript?
+     <p>o que é JavaScript?</p>
+     <div class="cartão__conteudo__pergunta">
+        <p>  O JavaScript é uma linguagem de Programação.</p>
     </div>
-    <div class="cartão__conteudo__pergunta">
-        O JavaScript é uma linguagem de Programação.
     </div>
   </article>
   <article class="cartão">
     <div class="cartão__conteudo">
         <h3>Programação</h3>
-    </div class="cartão__conteudo__pergunta">
-    O que é css?
-</div>
-<div class="cartão__conteudo__pergunta">
-    O css é uma linguagem de estilização.
-</div>
-</article>
+        </div class="cartão__conteudo__pergunta">
+       <p>O que é css?</p>
+  </div>
+  <div class="cartão__conteudo__pergunta">
+   <p>O css é uma linguagem de estilização.</p>
+   </div>
+  </article>
   </section>
  </main>  
  <footer>
-    <p>Projeto desenvolvido pela Alura,sem fins lucrativos</p>
- </footer> 
+<p>Projeto desenvolvido pela Alura,sem fins lucrativos</p>
+   </footer> 
 </body>
 </html>
