--- a/index.html
+++ b/index.html
@@ -29,6 +29,16 @@
    <p>O css é uma linguagem de estilização.</p>
    </div>
   </article>
+  <article class="cartão"></article>
+    <div class="cartão__conteudo">
+        <h3>Programação</h3>
+        </div class="cartão__conteudo__pergunta">
+       <p>O que é css?</p>
+  </div>
+  <div class="cartão__conteudo__pergunta">
+   <p>O css é uma linguagem de estilização.</p>
+   </div>
+  </article>
   </section>
  </main>  
  <footer>
