--- a/index.html
+++ b/index.html
@@ -24,9 +24,24 @@
         <h3>Programação</h3>
         </div class="cartão__conteudo__pergunta">
        <p>O que é css?</p>
+       <article class="cartão">
+        <div class="cartão__conteudo">
+       <h3>Programação</h3>
+        </div class="cartão__conteudo__pergunta">
+     <p>o que é JavaScript?</p>
+     <div class="cartão__conteudo__pergunta">
+        <p>  O JavaScript é uma linguagem de Programação.</p>
+    </div>
+    </div>
+  </article>
+  <article class="cartão">
+    <div class="cartão__conteudo">
+        <h3>Geografia</h3>
+        </div class="cartão__conteudo__pergunta">
+       <p>Qual a capital da França?</p>
   </div>
   <div class="cartão__conteudo__pergunta">
-   <p>O css é uma linguagem de estilização.</p>
+   <p>Acapital da França é Paris.</p>
    </div>
   </article>
   <article class="cartão"></article>
