--- a/index.html
+++ b/index.html
@@ -4,82 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>flashcads</title>
+    <title>flashcards</title>
 </head>
 <body>
- <main>
-  <section id="container">
-    <article class="cartão">
-        <div class="cartão__conteudo">
-       <h3>Programação</h3>
-        </div class="cartão__conteudo__pergunta">
-     <p>o que é JavaScript?</p>
-     <div class="cartão__conteudo__pergunta">
-        <p>  O JavaScript é uma linguagem de Programação.</p>
-    </div>
-    </div>
-  </article>
-  <article class="cartão">
-    <div class="cartão__conteudo">
-        <h3>Programação</h3>
-        </div class="cartão__conteudo__pergunta">
-       <p>O que é css?</p>
-       <article class="cartão">
-        <div class="cartão__conteudo">
-       <h3>Programação</h3>
-        </div class="cartão__conteudo__pergunta">
-     <p>o que é JavaScript?</p>
-     <div class="cartão__conteudo__pergunta">
-        <p>  O JavaScript é uma linguagem de Programação.</p>
-    </div>
-    <div class="cartão__conteudo">
-      <h3>Programação</h3>
-      </div class="cartão__conteudo__pergunta">
-     <p>O que é css?</p>
-     <article class="cartão">
-      <div class="cartão__conteudo">
-     <h3>Programação</h3>
-      </div class="cartão__conteudo__pergunta">
-   <p>o que é JavaScript?</p>
-   <div class="cartão__conteudo__pergunta">
-      <p>  O JavaScript é uma linguagem de Programação.</p>
-      <div class="cartão__conteudo">
-        <h3>Programação</h3>
-        </div class="cartão__conteudo__pergunta">
-       <p>O que é css?</p>
-       <article class="cartão">
-        <div class="cartão__conteudo">
-       <h3>Programação</h3>
-        </div class="cartão__conteudo__pergunta">
-     <p>o que é JavaScript?</p>
-     <div class="cartão__conteudo__pergunta">
-        <p>  O JavaScript é uma linguagem de Programação.</p>
-    </div>
-  </article>
-  <article class="cartão">
-    <div class="cartão__conteudo">
-        <h3>Geografia</h3>
-        </div class="cartão__conteudo__pergunta">
-       <p>Qual a capital da França?</p>
-  </div>
-  <div class="cartão__conteudo__pergunta">
-   <p>Acapital da França é Paris.</p>
-   </div>
-  </article>
-  <article class="cartão"></article>
-    <div class="cartão__conteudo">
-        <h3>Programação</h3>
-        </div class="cartão__conteudo__pergunta">
-       <p>O que é css?</p>
-  </div>
-  <div class="cartão__conteudo__pergunta">
-   <p>O css é uma linguagem de estilização.</p>
-   </div>
-  </article>
-  </section>
- </main>  
- <footer>
-<p>Projeto desenvolvido pela Alura,sem fins lucrativos</p>
-   </footer> 
+      <main>
+         <section id="container">
+          <article class="cartao">
+            <div class="cartao__conteudo">
+               <h3>progamação</h3>
+                 <div class="cartao__conteudo__pergunta">
+                  <p>python?</p>
+                 </div>
+               <div class="cartao__conteudo__pergunta">
+            <p> O javaScript é uma linguaguem de progamação.</p>
+           </div>
+         </div>
+     <article>
+    </main>
+    <footer>
+        <p>Projeto desenvolvido pela Alura, sem fins lucrativos </p>
+    </footer>
+    <script src=""></script>
 </body>
 </html>
