--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
       <main>
          <section id="container">
-          <article class="cartao">
+         <!-- <article class="cartao">
             <div class="cartao__conteudo">
                <h3>progamação</h3>
                  <div class="cartao__conteudo__pergunta">
@@ -19,7 +19,7 @@
             <p> O javaScript é uma linguaguem de progamação.</p>
            </div>
          </div>
-     <article>
+     <article> -->
     </main>
     <footer>
         <p>Projeto desenvolvido pela Alura, sem fins lucrativos </p>
